config/apps/echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-api
  labels:
    app: echo-api
spec:
  selector:
    matchLabels:
      app: echo-api
  template:
    metadata:
      labels:
        app: echo-api
    spec:
      containers:
        - name: echo-api
          image: quay.io/3scale/authorino:echo-api
          ports:
            - containerPort: 3000
              name: http
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: echo-api
spec:
  selector:
    app: echo-api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
